# youtube-to-anki

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
youtube_to_anki/: anki.py  main.py  utils.py
youtube_to_anki/youtube/: __init__.py  audio.py  download.py  info.py  transcript.py
