[tool.poetry]
name = "youtube-to-anki"
version = "0.1.3"
description = "Convert YouTube videos to Anki decks."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
genanki = "^0.10"
pydub = "^0.25"
youtube_dl = "2021.04.07"
youtube_transcript_api = "^0.4"
click = "^7.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pylint = "^2.7"
mypy = "0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-to-anki = 'youtube_to_anki.main:main'
