[tool.poetry]
name = "youtube-to-anki"
version = "0.1.3"
description = "Convert YouTube videos to Anki decks."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
genanki = "^0.13"
pydub = "^0.25"
yt_dlp = "^2023.2.17"
youtube_transcript_api = ">0.4"
click = ">8.0"
opencv_python = "^4.7.0.68"

[tool.poetry.dev-dependencies]
black = "^22.12"
pylint = "^2.7"
mypy = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-to-anki = 'youtube_to_anki.main:main'
